Closed
Bug 1439677
Opened 7 years ago
Closed 7 years ago
Make `console.assert` print the stack to stdout
Categories
(DevTools :: Console, defect, P3)
DevTools
Console
Tracking
(firefox60 fixed)
RESOLVED
FIXED
Firefox 60
Tracking | Status | |
---|---|---|
firefox60 | --- | fixed |
People
(Reporter: bgrins, Assigned: baku)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
6.11 KB,
patch
|
bgrins
:
review+
|
Details | Diff | Splinter Review |
STR: Run this in any script (i.e. browser.js)
var c = console.createInstance();
function a() {
c.assert(false, "b");
}
a();
Expected - some kind of stack trace like:
b browser.js:10:3
a chrome://browser/content/browser.js:10:3
<anonymous> chrome://browser/content/browser.js:12:1
<anonymous> chrome://browser/content/browser.xul:82:3
Actual - no stack trace in stdout:
console.assert: "b"
Reporter | ||
Updated•7 years ago
|
Priority: -- → P3
Assignee | ||
Comment 1•7 years ago
|
||
Assignee: nobody → amarchesini
Attachment #8952791 -
Flags: review?(bgrinstead)
Reporter | ||
Comment 2•7 years ago
|
||
Comment on attachment 8952791 [details] [diff] [review]
console2.patch
Review of attachment 8952791 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks!
Attachment #8952791 -
Flags: review?(bgrinstead) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ca3d342c3b15
Console.assert() should print the stack to stdout, r=bgrins
Comment 4•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 60
Updated•6 years ago
|
Product: Firefox → DevTools
You need to log in
before you can comment on or make changes to this bug.
Description
•