Bug 1439677 - Console.assert() should print the stack to stdout, r=bgrins